changing the location of the Api key because it wasn't suitable for developing on windows

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
-    "start": "REACT_APP_MOVIE_API_KEY=d5989da1517d7182f1ae5529fcbdb122 react-scripts start",
-    "build": "REACT_APP_MOVIE_API_KEY=d5989da1517d7182f1ae5529fcbdb122 react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
